--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,8 +16,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand page-scroll" href="/">
-        <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bomb</span><br>
-        <p>The online showcase for software developers,enhance your work, connent & learn with developers everyone</p>
+        <%=image_tag ("NodeBomb_logo.png") %> <span><strong>Node</strong>Bomb</span>
       </a>
     </div>
 
