--- a/app/views/shared/_innerheader.html.erb
+++ b/app/views/shared/_innerheader.html.erb
@@ -74,19 +74,20 @@
         <h4 class="modal-title">I'M INTERESTED IN INVESTING</h4>
       </div>
       <div class="modal-body">
-        <form action="">
+        <form action="https://getsimpleform.com/messages?form_api_token=1e60f6293859bffddf091f6c58607e30" method="post">
+          <input type='hidden' name='redirect_to' value=<%= root_url%> />
           <p>Please enter your reservation amount. This is a non-binding soft reservation. A company representative will be notified and you'll have an opportunity to contact.</p>
           <div class="input-group">
             <span class="input-group-addon" id="basic-addon1">$</span>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" name="amount" class="form-control" aria-label="Amount (to the nearest dollar)">
           </div>
           <h4 class="Comments-hd">Comments or Questions (optional)</h4>
-          <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+          <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message." name="message"></textarea>
           <p class="help-block text-danger"></p>
+            <div class="modal-footer">
+              <button id="invester-form" type="submit" class="btn btn-default request-btn">MAKE A RESERVATION</button>
+            </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button id="invester-form"type="button" class="btn btn-default request-btn" data-dismiss="modal" onclick="window.location.href='#'">MAKE A RESERVATION</button>
       </div>
     </div>
 
